--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<h1>Users#index - Welcome to my Blog! Check out where I've been!</h1>
+
+<p>Add Map, and nav bar here</p>
