--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @post do |f| %>
+<%= form_for @post, :html => {:multipart => true} do |f| %>
  <%if @post.errors.any? %>
 	<div id=“errors”>
 		<h2> <%= pluralize(@post.errors.count, "error")%>
@@ -6,23 +6,37 @@
 		<ul>
 			<% @post.errors.full_messages.each do |msg| %>
 			<li> <%= msg %> </li>
-			<% end %>
+<%end%>
 		</ul>
 	</div>
-	<% end %>
+<%end%>
 
 	<p>
 		<%= f.label :title %><br>
 		<%= f.text_field :title %>
 	</p>
 
+    <p>
+        <%= f.label :country %>
+        <%= f.text_field :country %>
+        <%= f.label :city %>
+        <%= f.text_field :city %>
+    </p>
+
 	<p>
 		<%= f.label :body %><br>
 		<%= f.text_area :body %>
 	</p>
 
-	<p>
-		<%= f.submit %>
-	</p>
-
-	<% end %>
+<div id=“photos”>
+<p>
+    <%= f.label :avatar %> <br>
+    <%= f.file_field :avatar %> </p>
+<p>
+    <%= image_tag(@post.avatar_url) if @post.avatar? %>
+    <%= f.text_field :remote_avatar_url %> </p>
+    <p>
+    <%= f.submit %>
+</p>
+    <%end%>
+</div>
