fixed shit I broke

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,22 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
+
+<style type="text/css">
+
+.body{
+    background-color: blue;
+}
+
+.post_wrapper{
+    border: 5px solid gray;
+    height:200px;
+    width:200px;
+}
+.posts_container{
+    border: 5px, solid gray; 
+}
+</style>
 <body>
 
     <nav class="navbar navbar-inverse">
