--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,21 +1,13 @@
+<body>
+   <h1>Hello, world!</h1>
 
-
-
-     <style type="text/css">
-
-         html, body, {
-             height: 100%;
-             margin: 0;
-             padding: 0;
-             background-color: white;
-         }
-
-
-       </style>
-
+<div class="posts_container">
          <% @posts.each do|post| %>
          <div class=”post_wrapper”>
          <h2 class=“title”><%= link_to post.title, post %> </h2>
+         <h2 class=“title”><%= image_tag post.avatar %> </h2>
          <p class="date"><%= post.created_at.strftime("Posted on %B %d, %Y at %H:%M") %></p>
         </div>
          <% end %>
+</div>
+</body>
