--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,29 +1,30 @@
+<div class="content">
+	<h1 class="title"><%= @post.title %></h1>
+</div>
 
-
-<h1 class=”title”>
-<%= @post.title %>
-</h1>
-
-<h2 class=”location”>
-<%= @post.city %>
-<%= @post.country %>
-</h2>
-
-<p class=“date”>
-Submitted <% time_ago_in_words(@post.created_at) %> Ago
-| <%= link_to 'Edit', edit_post_path(@post) %>
-| <%= link_to 'Delete', post_path(@post), method: :delete, data: {confirm: 'Are you sure?'} %>
-</p>
-
-<p class="body">
-<%= @post.body %>
 <%= image_tag @post.avatar %>
-</p>
 
-<div id=”comments”>
-<h2><%= @post.comments.count %> Comments</h2>
-<%= render @post.comments %>
+<div class="content">
+	<h2 class="location">
+		<%= @post.city %>
+		<%= @post.country %>
+	</h2>
 
-<h3>Add a comment:</h3>
-<%= render "comments/form" %>
+	<p class="date">
+		Submitted <% time_ago_in_words(@post.created_at) %> Ago
+		| <%= link_to 'Edit', edit_post_path(@post) %>
+		| <%= link_to 'Delete', post_path(@post), method: :delete, data: {confirm: 'Are you sure?'} %>
+	</p>
+
+	<p><%= simple_format(@post.body) %></p>
+
+	<div id="comments">
+		<h2><%= @post.comments.count %> Comments</h2>
+		<%= render @post.comments %>
+
+		<h3>Talk to me!</h3>
+		<%= render "comments/form" %>
+	</div>
+	<br>
+	<p>What you think ur done? Nope! Go <%= link_to 'back', posts_path %> and click more!</p>
 </div>
