--- a/app/views/posts/map.html.erb
+++ b/app/views/posts/map.html.erb
@@ -1,35 +1,34 @@
-This is the map view!
 
-<script src="http://maps.google.com/maps/api/js?sensor=false"
-type="text/javascript"></script>
+<div class="content">
+    This is the map view! Aren't you excited?!!
+</div>
 
- <style type="text/css">
-#map {
-	height: 700px;
-	width: 1000px;
-	border-radius:30px;
-}
-</style>
+
+
 
 <div id="map"></div>
 
 <script type="text/javascript">
+// init is called after the map lib is loaded
+google.maps.event.addDomListener(window, 'load', init);
+function init() {
   var locations = [
-	['Stadtbibliothek Zanklhof', 47.06976, 15.43154, 1],
-	['Stadtbibliothek dieMediathek', 47.06975, 15.43116, 2],
-	['Stadtbibliothek Gösting', 47.09399, 15.40548, 3],
-	['Stadtbibliothek Graz West', 47.06993, 15.40727, 4],
-	['Stadtbibliothek Graz Ost', 47.06934, 15.45888, 5],
-	['Stadtbibliothek Graz Süd', 47.04572, 15.43234, 6],
-	['Stadtbibliothek Graz Nord', 47.08350, 15.43212, 7],
-	['Stadtbibliothek Andritz', 47.10280, 15.42137, 8]
+	['Paris, France', 48.856614, 2.352222, 1],
+	['Barcelona, Spain', 41.385064, 2.173403, 2],
+	['Istanbul, Turkey', 41.008238, 28.978359, 3]
   ];
 
+  // this is a custom pink style. u can google for premade map styles
+  var style = [{"featureType":"all","elementType":"geometry","stylers":[{"color":"#eec8df"}]},{"featureType":"all","elementType":"labels.text.fill","stylers":[{"gamma":0.01},{"lightness":20}]},{"featureType":"all","elementType":"labels.text.stroke","stylers":[{"saturation":-31},{"lightness":-33},{"weight":2},{"gamma":0.8}]},{"featureType":"all","elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"administrative.province","elementType":"labels.text.stroke","stylers":[{"saturation":"-98"},{"lightness":"87"}]},{"featureType":"administrative.locality","elementType":"labels.text.fill","stylers":[{"lightness":"-84"}]},{"featureType":"administrative.neighborhood","elementType":"labels.text.fill","stylers":[{"lightness":"100"},{"saturation":"-1"}]},{"featureType":"administrative.neighborhood","elementType":"labels.text.stroke","stylers":[{"saturation":"66"},{"lightness":"0"},{"weight":"2.60"}]},{"featureType":"landscape","elementType":"geometry","stylers":[{"lightness":30},{"saturation":30}]},{"featureType":"poi","elementType":"geometry","stylers":[{"saturation":20}]},{"featureType":"poi.park","elementType":"geometry","stylers":[{"lightness":20},{"saturation":-20}]},{"featureType":"road","elementType":"geometry","stylers":[{"lightness":"68"},{"saturation":"-14"},{"visibility":"simplified"}]},{"featureType":"road","elementType":"geometry.stroke","stylers":[{"saturation":25},{"lightness":25}]},{"featureType":"road","elementType":"labels.text","stylers":[{"saturation":"-100"},{"lightness":"-32"},{"gamma":"1.21"},{"weight":"0.01"}]},{"featureType":"water","elementType":"all","stylers":[{"lightness":-20}]}]
+
   var map = new google.maps.Map(document.getElementById('map'), {
-	zoom: 2,
+	zoom: 4,
 	center: new google.maps.LatLng(47.071876, 15.441456),
 	mapTypeId: google.maps.MapTypeId.ROADMAP
   });
+
+  // set style
+  map.setOptions({styles: style});
 
   var infowindow = new google.maps.InfoWindow();
 
@@ -47,5 +46,6 @@ type="text/javascript"></script>
 		infowindow.open(map, marker);
 	  }
 	})(marker, i));
+  }
   }
 </script>
