--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<div id="page_wrapper">
-<h1>New Post</h1>
-<%= render 'form' %>
+<div class="content">
+	<h1>New Post</h1>
+	<%= render 'form' %>
 </div>
