--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,7 +3,7 @@
 
 body {
     background: #333 url(http://www.myfreephotoshop.com/wp-content/uploads/2013/08/987.jpg);
-    background-size: contain;
+    background-size: 100%;
     background-repeat: repeat-y;
 
 }
