--- a/app/views/posts/map.html.erb
+++ b/app/views/posts/map.html.erb
@@ -1,10 +1,7 @@
 
 <div class="content">
-    This is the map view! Aren't you excited?!!
+    This is my map view! Aren't you excited?!!
 </div>
-
-
-
 
 <div id="map"></div>
 
@@ -13,9 +10,17 @@
 google.maps.event.addDomListener(window, 'load', init);
 function init() {
   var locations = [
-	['Paris, France', 48.856614, 2.352222, 1],
-	['Barcelona, Spain', 41.385064, 2.173403, 2],
-	['Istanbul, Turkey', 41.008238, 28.978359, 3]
+	['Paris, France', 48.856614, 2.352222, 11],
+	['Barcelona, Spain', 41.385064, 2.173403, 10],
+	['Istanbul, Turkey', 41.008238, 28.978359, 9],
+    ['Lille, France', 50.629250, 3.057256, 8],
+    ['Kusadasi, Turkey', 37.857913, 27.261015, 7],
+    ['Rome, Italy', 41.902783, 12.496366, 6]
+    ['Venice, Italy', 45.440847, 12.315515, 5],
+    ['Positano, Italy', 40.628053, 14.484981, 4],
+    ['Athens, Greece', 37.983917, 23.729360, 3],
+    ['Mykanos, Greece', 37.446719, 25.328862, 2],
+    ['Los Angeles, United States', 34.052234, -118.243685, 1],
   ];
 
   // this is a custom pink style. u can google for premade map styles
