--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,1 @@
-<h1>Users#index - Welcome to my Blog! Check out where I've been!</h1>
-
-<p>Add Map, and nav bar here</p>
+<h1>OMG you're HERE! GO do stuff</h1>
